# CL2-AutoDetective

./: .gitignore  .pylintrc  .tmuxinator.yml  AutoDetective.py  ENVIRONMENT.md  LOGGING.md  README.md  REMOTE_SETTINGS.md  data_logging.py  ego_agent.py  falsifier.py  mypy.ini  pyproject.toml  requirements.txt  simulator.py
OD_model_data/: carla_data.yaml
agents/navigation/: controller.py
agents/tools/: misc.py
scenarios/: oas_scenario_06.scenic
