[tool.poetry]
name = "auto-detective"
version = "0.0.1"
description = "AutoDetective fault detection"
authors = [
    "Kunal Chandan <kchandan@uwaterloo.ca>",
]
maintainers = [
    "Kunal Chandan <kchandan@uwaterloo.ca>",
]
readme = "README.md"
repository = "https://github.com/kunalchandan/CL2-AutoDetective"
documentation = "https://github.com/kunalchandan/CL2-AutoDetective"
classifiers = [
    'Operating System :: OS Independent',
    'Environment :: GPU :: NVIDIA CUDA',
    "Programming Language :: Python :: 3",
    'Development Status :: 1 - Planning',
]
[tool.poetry.dependencies]
python                     = "^3.7, <3.9"
dotmap                     = "^1.3.13"
matplotlib                 = "^3.2.1"
scipy                      = "^1.4.1"
opencv-python              = "^4.5.4"
numpy                      = "^1.21.3"
pillow                     = "^9.0.0"
pygame                     = "^2.0.1"
attrs                      = "^19.3.0"
decorator                  = "^5.0.9"
psutil                     = "^5.9.4"
typing-extensions          = "^4.5.0"
progressbar2               = "^4.2.0"
statsmodels                = "^0.13.5"
tensorflow                 = "~1.15"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
